January 8, 2004
	- converted icons from xpm to png and moved them to $OPIEDIR/pics/opie-sheet
	- modified mainwindow.cpp to load pixmaps with Resource::loadPixmap(resourcename) in contrast to the old QPixmap(nameofthe_xpm_included_in_the_opie-sheet_dir)
	- changed pics/opie-sheet/sheetqt.png entry in control file to pics/opie-sheet/*.png

January 8, 2004
	- fixed issue : "-if someone enters directly text as parameter to a string function the text renders as uppercase due to the calculation engine that uppercases all the parsing sentence."
	now the text is handled correctly.

January 7, 2004
	* Release by hayzel (koppermind@panafonet.gr)
	This version has many valuable changes, though It may have some annoying bugs. Please if you are interested in opie-sheet try it hard, so I can fix some of them. Also If you want some other functions that must be here and are missing feel free to ask them. (no financial functions please. :)  I really hate them )
	-Fixed a bug with non closed parenthesis editing&recalculation infinite loop.
	-Added support for functions that can parse parameters not ONLY as numbers but also as strings.
	-Added many functions that cover many computational topics rendering opie-sheet a computational tool-spreadsheet at last. (total 90 functions!)
	-Maintained compatibility with the opie-fileformat.
	-New icons.
	-Found that the DataParser was not a real RPN compiler of the expressions. In fact it was returning faulty results in calculations, in both binary or unary operations. A1-A2-A3 was parsed as A1-(A2-A3). -A1 was parsed as A1.
	-Added new class "Expression" a general Parser for spreadsheet-expression. Imported from an old C# project of mine.
	-Now can also parse <>=!%&^|"" in expressions.